@@ -1,0 +1,10 @@
+#!/bin/sh -e
+
+#DEBHELPER#
+
+if [ "$1" = "purge" ]; then
+    update-rc.d ardj-ezstream remove
+    update-rc.d ardj-ices remove
+    update-rc.d ardj-jabber remove
+    update-rc.d ardj-server remove
+fi
